--- a/src/Ghoul.Tests/packages.config
+++ b/src/Ghoul.Tests/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.0" targetFramework="net461" />
   <package id="NExpect" version="1.0.103" targetFramework="net461" />
+  <package id="NSubstitute" version="3.1.0" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
-  <package id="PeanutButter.RandomGenerators" version="1.2.220" targetFramework="net461" />
-  <package id="PeanutButter.Utils" version="1.2.220" targetFramework="net461" />
+  <package id="PeanutButter.RandomGenerators" version="1.2.221" targetFramework="net461" />
+  <package id="PeanutButter.TrayIcon" version="1.2.221" targetFramework="net461" />
+  <package id="PeanutButter.Utils" version="1.2.221" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
