feat: add some more fuzzy matchers for finding windows on restore layout

--- a/src/Ghoul.Tests/Ghoul.Tests.csproj
+++ b/src/Ghoul.Tests/Ghoul.Tests.csproj
@@ -43,13 +43,13 @@
       <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="PeanutButter.RandomGenerators, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PeanutButter.RandomGenerators.1.2.221\lib\net452\PeanutButter.RandomGenerators.dll</HintPath>
+      <HintPath>..\packages\PeanutButter.RandomGenerators.1.2.222\lib\net452\PeanutButter.RandomGenerators.dll</HintPath>
     </Reference>
     <Reference Include="PeanutButter.TrayIcon, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PeanutButter.TrayIcon.1.2.221\lib\net452\PeanutButter.TrayIcon.dll</HintPath>
+      <HintPath>..\packages\PeanutButter.TrayIcon.1.2.222\lib\net452\PeanutButter.TrayIcon.dll</HintPath>
     </Reference>
     <Reference Include="PeanutButter.Utils, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PeanutButter.Utils.1.2.221\lib\net452\PeanutButter.Utils.dll</HintPath>
+      <HintPath>..\packages\PeanutButter.Utils.1.2.222\lib\net452\PeanutButter.Utils.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -70,10 +70,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DiscoveryTests.cs" />
+    <Compile Include="ProcessWindowBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBootstrapper.cs" />
     <Compile Include="TestLayoutConfigurationItem.cs" />
     <Compile Include="TestWindowPosition.cs" />
+    <Compile Include="TypeMatchers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
