--- a/src/Ghoul/Ghoul.csproj
+++ b/src/Ghoul/Ghoul.csproj
@@ -33,16 +33,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PeanutButter.INI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PeanutButter.INI.1.2.221\lib\net452\PeanutButter.INI.dll</HintPath>
+      <HintPath>..\packages\PeanutButter.INI.1.2.222\lib\net452\PeanutButter.INI.dll</HintPath>
     </Reference>
     <Reference Include="PeanutButter.TinyEventAggregator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PeanutButter.TinyEventAggregator.1.2.221\lib\net452\PeanutButter.TinyEventAggregator.dll</HintPath>
+      <HintPath>..\packages\PeanutButter.TinyEventAggregator.1.2.222\lib\net452\PeanutButter.TinyEventAggregator.dll</HintPath>
     </Reference>
     <Reference Include="PeanutButter.TrayIcon, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PeanutButter.TrayIcon.1.2.221\lib\net452\PeanutButter.TrayIcon.dll</HintPath>
+      <HintPath>..\packages\PeanutButter.TrayIcon.1.2.222\lib\net452\PeanutButter.TrayIcon.dll</HintPath>
     </Reference>
     <Reference Include="PeanutButter.Utils, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PeanutButter.Utils.1.2.221\lib\net452\PeanutButter.Utils.dll</HintPath>
+      <HintPath>..\packages\PeanutButter.Utils.1.2.222\lib\net452\PeanutButter.Utils.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -93,6 +93,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="SectionNameHelper.cs" />
+    <Compile Include="StringExtensions.cs" />
+    <Compile Include="UserInput.cs" />
     <Compile Include="Win32Api.cs" />
     <Compile Include="WindowPosition.cs" />
     <EmbeddedResource Include="CheckListDialog.resx">
