--- a/src/Ghoul.Tests/packages.config
+++ b/src/Ghoul.Tests/packages.config
@@ -4,6 +4,7 @@
   <package id="NExpect" version="1.0.103" targetFramework="net461" />
   <package id="NSubstitute" version="3.1.0" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
+  <package id="PeanutButter.INI" version="1.2.222" targetFramework="net461" />
   <package id="PeanutButter.RandomGenerators" version="1.2.222" targetFramework="net461" />
   <package id="PeanutButter.TrayIcon" version="1.2.222" targetFramework="net461" />
   <package id="PeanutButter.Utils" version="1.2.222" targetFramework="net461" />
