feat: add installer script & generator

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "gulp": "gulp",
     "install": "gulp install",
+    "release": "gulp release",
     "test": "gulp test-dotnet"
   },
   "devDependencies": {
