--- a/src/Ghoul/packages.config
+++ b/src/Ghoul/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="2.1.2" targetFramework="net461" />
   <package id="DryIoc" version="2.12.7" targetFramework="net461" />
+  <package id="NCrash" version="1.0.0" targetFramework="net461" />
+  <package id="NCrash.WinForms" version="1.0.0" targetFramework="net461" />
   <package id="PeanutButter.INI" version="1.2.235" targetFramework="net461" />
   <package id="PeanutButter.TinyEventAggregator" version="1.2.235" targetFramework="net461" />
   <package id="PeanutButter.TrayIcon" version="1.2.235" targetFramework="net461" />
