feat: restore minimized windows before moving them feat: facilitate easier overwriting of an existing layout with       combobox and autocomplete

--- a/src/Ghoul.Tests/Ghoul.Tests.csproj
+++ b/src/Ghoul.Tests/Ghoul.Tests.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestConfigExtensions.cs" />
     <Compile Include="DiscoveryTests.cs" />
     <Compile Include="Builders\ProcessWindowBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
