--- a/package.json
+++ b/package.json
@@ -1,43 +1,15 @@
 {
   "name": "ghoul",
   "scripts": {
-    "gulp": "gulp",
-    "install": "gulp install",
-    "release": "gulp release",
-    "test": "gulp test-dotnet"
+    "zarro": "zarro",
+    "install": "zarro install",
+    "build": "zarro build",
+    "release": "zarro release",
+    "test": "zarro test-dotnet"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "debug": "^3.1.0",
-    "del": "^3.0.0",
-    "event-stream": "^3.3.4",
-    "gulp": "^3.9.1",
-    "gulp-debug": "^3.2.0",
-    "gulp-help": "^1.6.1",
-    "gulp-msbuild": "^0.5.4",
-    "gulp-npm-run": "0.0.3",
-    "gulp-nunit-runner": "^1.2.2",
-    "gulp-util": "^3.0.8",
-    "jasmine-core": "^3.1.0",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.1.1",
-    "karma-nested-reporter": "^0.1.6",
-    "karma-requirejs": "^1.1.0",
-    "karma-xml-reporter": "^0.1.4",
-    "mkdirp": "0.5.1",
-    "node-win-shortcut": "0.0.3",
-    "nodemon": "^1.17.2",
-    "npm-run-all": "^4.1.2",
-    "proxyquire": "^2.0.0",
-    "q": "^1.5.1",
-    "request": "^2.85.0",
-    "require-dir": "^1.0.0",
-    "requirejs": "^2.3.5",
-    "run-sequence": "^2.2.1",
-    "through2": "^2.0.3",
-    "which": "^1.3.0"
+    "cross-env": "^7.0.2",
+    "npm-run-all": "^4.1.5",
+    "zarro": "^1.61.0"
   }
 }
